Add bilingual UI support across pages

--- a/achievements.html
+++ b/achievements.html
@@ -23,33 +23,33 @@
 
   <!-- Main Content -->
   <main class="achievements-container">
-    <h1 class="page-title">إنجازاتي</h1>
+    <h1 class="page-title" data-i18n-en="My achievements">إنجازاتي</h1>
 
     <!-- Summary -->
     <section class="summary-cards">
       <div class="summary-card">
         <i class="fa fa-graduation-cap"></i>
-        <h3>الدورات المكتملة</h3>
+        <h3 data-i18n-en="Completed courses">الدورات المكتملة</h3>
         <span id="completedCourses">0</span>
       </div>
 
       <div class="summary-card">
         <i class="fa fa-certificate"></i>
-        <h3>الشهادات</h3>
+        <h3 data-i18n-en="Certificates">الشهادات</h3>
         <span id="certificatesCount">0</span>
       </div>
     </section>
 
     <!-- Certificates -->
     <section class="section-block">
-      <h2>الشهادات</h2>
-      <div class="certificates-list" id="certificatesList"></div>
+      <h2 data-i18n-en="Certificates">الشهادات</h2>
+      <div class="certificates-list" id="certificatesList" data-i18n-skip="true"></div>
     </section>
 
     <!-- Completed Courses -->
     <section class="section-block">
-      <h2>الدورات المكتملة</h2>
-      <div class="courses-list" id="coursesList"></div>
+      <h2 data-i18n-en="Completed courses">الدورات المكتملة</h2>
+      <div class="courses-list" id="coursesList" data-i18n-skip="true"></div>
     </section>
   </main>
 
