--- a/certificates.html
+++ b/certificates.html
@@ -19,9 +19,9 @@
 <div id="header-placeholder"></div>
 
 <section class="container">
-  <h2>الشهادات الخاصة بك</h2>
-  <p>تم نقل الشهادات إلى صفحة الإنجازات حتى تتمكن من عرضها وتنزيلها بسهولة.</p>
-  <a href="/achievements.html" class="btn">الانتقال إلى إنجازاتي</a>
+  <h2 data-i18n-en="Your certificates">الشهادات الخاصة بك</h2>
+  <p data-i18n-en="Certificates have been moved to the achievements page so you can view and download them easily.">تم نقل الشهادات إلى صفحة الإنجازات حتى تتمكن من عرضها وتنزيلها بسهولة.</p>
+  <a href="/achievements.html" class="btn" data-i18n-en="Go to my achievements">الانتقال إلى إنجازاتي</a>
 </section>
 
 <link rel="stylesheet" href="css/footer.css">
