--- a/my-courses.html
+++ b/my-courses.html
@@ -31,19 +31,19 @@
 
   <!-- Main Content -->
   <main class="courses-container">
-    <h1 class="page-title">دوراتي</h1>
+    <h1 class="page-title" data-i18n-en="My courses">دوراتي</h1>
 
     <!-- Tabs -->
     <div class="tabs">
-      <button class="tab-btn active" data-tab="current">دوراتي الحالية</button>
-      <button class="tab-btn" data-tab="completed">دوراتي المنجزة</button>
-      <button class="tab-btn" data-tab="favorites">دوراتي المفضلة</button>
+      <button class="tab-btn active" data-tab="current" data-i18n-en="Current courses">دوراتي الحالية</button>
+      <button class="tab-btn" data-tab="completed" data-i18n-en="Completed courses">دوراتي المنجزة</button>
+      <button class="tab-btn" data-tab="favorites" data-i18n-en="Favorite courses">دوراتي المفضلة</button>
     </div>
 
     <!-- Tab Contents -->
-    <div id="current" class="tab-content active"></div>
-    <div id="completed" class="tab-content"></div>
-    <div id="favorites" class="tab-content"></div>
+    <div id="current" class="tab-content active" data-i18n-skip="true"></div>
+    <div id="completed" class="tab-content" data-i18n-skip="true"></div>
+    <div id="favorites" class="tab-content" data-i18n-skip="true"></div>
   </main>
 
   <!-- Footer -->
