--- a/notifications.html
+++ b/notifications.html
@@ -14,16 +14,16 @@
 
   <main class="notifications-page">
     <div class="notifications-header">
-      <h1>الإشعارات</h1>
-      <p>تابع تقدمك في الدورات والتحديثات المهمة في مكان واحد.</p>
+      <h1 data-i18n-en="Notifications">الإشعارات</h1>
+      <p data-i18n-en="Track your course progress and important updates in one place.">تابع تقدمك في الدورات والتحديثات المهمة في مكان واحد.</p>
     </div>
 
     <section class="notifications-panel">
       <div class="notifications-toolbar">
-        <span id="notificationsCount">0 إشعار</span>
-        <button id="markAllReadBtn" class="secondary-btn">تحديد الكل كمقروء</button>
+        <span id="notificationsCount" data-i18n-en="0 notifications">0 إشعار</span>
+        <button id="markAllReadBtn" class="secondary-btn" data-i18n-en="Mark all as read">تحديد الكل كمقروء</button>
       </div>
-      <div id="notificationsList" class="notifications-list"></div>
+      <div id="notificationsList" class="notifications-list" data-i18n-skip="true"></div>
     </section>
   </main>
 
