--- a/paths.html
+++ b/paths.html
@@ -14,42 +14,42 @@
 
   <main class="paths-page">
     <div class="paths-hero">
-      <h1>المسارات التعليمية</h1>
-      <p>خطط تعلم منظمة تساعدك على الانتقال من المستوى المبتدئ إلى الاحتراف.</p>
+      <h1 data-i18n-en="Learning paths">المسارات التعليمية</h1>
+      <p data-i18n-en="Structured learning plans that help you move from beginner to professional.">خطط تعلم منظمة تساعدك على الانتقال من المستوى المبتدئ إلى الاحتراف.</p>
     </div>
 
     <section class="paths-grid">
       <article class="path-card">
-        <h3>مسار تطوير الويب الكامل</h3>
-        <p>ابدأ من أساسيات HTML وCSS حتى بناء تطبيقات متقدمة بواجهات تفاعلية.</p>
+        <h3 data-i18n-en="Full web development path">مسار تطوير الويب الكامل</h3>
+        <p data-i18n-en="Start from HTML & CSS basics all the way to advanced apps with interactive interfaces.">ابدأ من أساسيات HTML وCSS حتى بناء تطبيقات متقدمة بواجهات تفاعلية.</p>
         <ul>
-          <li>5 دورات</li>
-          <li>12 اختبارًا</li>
-          <li>مشروع تخرج عملي</li>
+          <li data-i18n-en="5 courses">5 دورات</li>
+          <li data-i18n-en="12 tests">12 اختبارًا</li>
+          <li data-i18n-en="Practical capstone project">مشروع تخرج عملي</li>
         </ul>
-        <a class="btn" href="/courses.html">استعراض الدورات</a>
+        <a class="btn" href="/courses.html" data-i18n-en="Browse courses">استعراض الدورات</a>
       </article>
 
       <article class="path-card">
-        <h3>مسار تحليل البيانات</h3>
-        <p>تعلّم Excel المتقدم، Python للبيانات، ولوحات المعلومات الاحترافية.</p>
+        <h3 data-i18n-en="Data analytics path">مسار تحليل البيانات</h3>
+        <p data-i18n-en="Learn advanced Excel, Python for data, and professional dashboards.">تعلّم Excel المتقدم، Python للبيانات، ولوحات المعلومات الاحترافية.</p>
         <ul>
-          <li>4 دورات</li>
-          <li>8 اختبارات</li>
-          <li>3 مشاريع تطبيقية</li>
+          <li data-i18n-en="4 courses">4 دورات</li>
+          <li data-i18n-en="8 tests">8 اختبارات</li>
+          <li data-i18n-en="3 applied projects">3 مشاريع تطبيقية</li>
         </ul>
-        <a class="btn" href="/courses.html">ابدأ المسار</a>
+        <a class="btn" href="/courses.html" data-i18n-en="Start the path">ابدأ المسار</a>
       </article>
 
       <article class="path-card">
-        <h3>مسار الذكاء الاصطناعي</h3>
-        <p>تعلم مفاهيم تعلم الآلة وبناء نماذج قابلة للنشر في المشاريع.</p>
+        <h3 data-i18n-en="Artificial intelligence path">مسار الذكاء الاصطناعي</h3>
+        <p data-i18n-en="Learn machine learning concepts and build deployable models.">تعلم مفاهيم تعلم الآلة وبناء نماذج قابلة للنشر في المشاريع.</p>
         <ul>
-          <li>6 دورات</li>
-          <li>10 اختبارات</li>
-          <li>مختبرات عملية</li>
+          <li data-i18n-en="6 courses">6 دورات</li>
+          <li data-i18n-en="10 tests">10 اختبارات</li>
+          <li data-i18n-en="Hands-on labs">مختبرات عملية</li>
         </ul>
-        <a class="btn" href="/courses.html">تعرف على المسار</a>
+        <a class="btn" href="/courses.html" data-i18n-en="Explore this path">تعرف على المسار</a>
       </article>
     </section>
   </main>
