--- a/privacy.html
+++ b/privacy.html
@@ -21,47 +21,46 @@
 </head>
 <body>
 
-<h1>سياسة الخصوصية</h1>
+<h1 data-i18n-en="Privacy Policy">سياسة الخصوصية</h1>
 
-<p>
+<p data-i18n-en="At CourseHub, we respect your privacy and are committed to protecting your personal data. This page explains how we collect, use, and safeguard information when you use our site.">
 نحن في <strong>CourseHub</strong> نحترم خصوصيتك ونلتزم بحماية بياناتك الشخصية.
 توضح هذه الصفحة كيفية جمع واستخدام وحماية المعلومات عند استخدامك لموقعنا.
 </p>
 
-<h2>المعلومات التي نقوم بجمعها</h2>
+<h2 data-i18n-en="Information We Collect">المعلومات التي نقوم بجمعها</h2>
 <ul>
-  <li>الاسم والبريد الإلكتروني عند التسجيل</li>
-  <li>معلومات الحساب القادمة من Google عند تسجيل الدخول</li>
-  <li>بيانات الاستخدام داخل المنصة (الدورات، التقدم، الشهادات)</li>
+  <li data-i18n-en="Name and email address during registration">الاسم والبريد الإلكتروني عند التسجيل</li>
+  <li data-i18n-en="Account information from Google when you sign in">معلومات الحساب القادمة من Google عند تسجيل الدخول</li>
+  <li data-i18n-en="Usage data inside the platform (courses, progress, certificates)">بيانات الاستخدام داخل المنصة (الدورات، التقدم، الشهادات)</li>
 </ul>
 
-<h2>كيف نستخدم المعلومات</h2>
+<h2 data-i18n-en="How We Use Information">كيف نستخدم المعلومات</h2>
 <ul>
-  <li>إنشاء وإدارة حسابك</li>
-  <li>تقديم خدمات الدورات والشهادات</li>
-  <li>تحسين تجربة المستخدم</li>
+  <li data-i18n-en="Create and manage your account">إنشاء وإدارة حسابك</li>
+  <li data-i18n-en="Provide courses and certificate services">تقديم خدمات الدورات والشهادات</li>
+  <li data-i18n-en="Improve the user experience">تحسين تجربة المستخدم</li>
 </ul>
 
-<h2>حماية البيانات</h2>
-<p>
+<h2 data-i18n-en="Data Protection">حماية البيانات</h2>
+<p data-i18n-en="We use Google Firebase services to securely store data, and we do not share your data with any third party without your consent.">
 نستخدم خدمات Google Firebase لتخزين البيانات بشكل آمن،
 ولا نشارك بياناتك مع أي طرف ثالث دون موافقتك.
 </p>
 
-<h2>حقوق المستخدم</h2>
-<p>
+<h2 data-i18n-en="Your Rights">حقوق المستخدم</h2>
+<p data-i18n-en="You may request deletion of your account or data at any time by contacting us.">
 يحق لك طلب حذف حسابك أو بياناتك في أي وقت عبر التواصل معنا.
 </p>
 
-<h2>التعديلات</h2>
-<p>
+<h2 data-i18n-en="Updates">التعديلات</h2>
+<p data-i18n-en="We may update this privacy policy from time to time, and any changes will be posted on this page.">
 قد نقوم بتحديث سياسة الخصوصية من وقت لآخر،
 وسيتم نشر أي تعديل على هذه الصفحة.
 </p>
 
-<p>
-آخر تحديث: 2026
-</p>
+<p data-i18n-en="Last updated: 2026">آخر تحديث: 2026</p>
 
+  <script src="/js/main.js" defer></script>
 </body>
 </html>
