--- a/register.html
+++ b/register.html
@@ -11,16 +11,16 @@
 <div id="header-placeholder"></div>
 
 <main class="login-page container">
-  <h2>إنشاء حساب جديد</h2>
+  <h2 data-i18n-en="Create a new account">إنشاء حساب جديد</h2>
 
   <form id="registerForm">
-    <input id="regEmail" type="email" placeholder="البريد الإلكتروني" required>
-    <input id="regPassword" type="password" placeholder="كلمة المرور" required>
-    <button type="submit">إنشاء الحساب</button>
+    <input id="regEmail" type="email" placeholder="البريد الإلكتروني" required data-i18n-placeholder-en="Email">
+    <input id="regPassword" type="password" placeholder="كلمة المرور" required data-i18n-placeholder-en="Password">
+    <button type="submit" data-i18n-en="Create account">إنشاء الحساب</button>
   </form>
 
   <p class="login-links">
-    <a href="login.html">تسجيل الدخول</a>
+    <a href="login.html" data-i18n-en="Log in">تسجيل الدخول</a>
   </p>
 </main>
 
