--- a/terms.html
+++ b/terms.html
@@ -21,44 +21,43 @@
 </head>
 <body>
 
-<h1>الشروط والأحكام</h1>
+<h1 data-i18n-en="Terms and Conditions">الشروط والأحكام</h1>
 
-<p>
+<p data-i18n-en="By using the CourseHub site, you agree to the following terms and conditions.">
 باستخدامك لموقع <strong>CourseHub</strong>، فإنك توافق على الشروط والأحكام التالية.
 </p>
 
-<h2>استخدام الموقع</h2>
+<h2 data-i18n-en="Site Use">استخدام الموقع</h2>
 <ul>
-  <li>يجب استخدام الموقع لأغراض تعليمية فقط</li>
-  <li>يمنع إساءة استخدام المنصة أو محاولة اختراقها</li>
+  <li data-i18n-en="The site must be used for educational purposes only">يجب استخدام الموقع لأغراض تعليمية فقط</li>
+  <li data-i18n-en="Misuse of the platform or attempts to hack it are prohibited">يمنع إساءة استخدام المنصة أو محاولة اختراقها</li>
 </ul>
 
-<h2>الحسابات</h2>
+<h2 data-i18n-en="Accounts">الحسابات</h2>
 <ul>
-  <li>المستخدم مسؤول عن الحفاظ على أمان حسابه</li>
-  <li>يمنع إنشاء حسابات وهمية أو استخدام بيانات غير صحيحة</li>
+  <li data-i18n-en="The user is responsible for keeping their account secure">المستخدم مسؤول عن الحفاظ على أمان حسابه</li>
+  <li data-i18n-en="Creating fake accounts or using incorrect data is prohibited">يمنع إنشاء حسابات وهمية أو استخدام بيانات غير صحيحة</li>
 </ul>
 
-<h2>المحتوى</h2>
-<p>
+<h2 data-i18n-en="Content">المحتوى</h2>
+<p data-i18n-en="All courses and content displayed are owned by CourseHub or its partners and may not be copied or republished without permission.">
 جميع الدورات والمحتويات المعروضة مملوكة لـ CourseHub أو لشركائها،
 ولا يجوز نسخها أو إعادة نشرها بدون إذن.
 </p>
 
-<h2>إنهاء الخدمة</h2>
-<p>
+<h2 data-i18n-en="Service Termination">إنهاء الخدمة</h2>
+<p data-i18n-en="We reserve the right to suspend or delete any account that violates these terms.">
 نحتفظ بالحق في تعليق أو حذف أي حساب يخالف هذه الشروط.
 </p>
 
-<h2>التعديلات</h2>
-<p>
+<h2 data-i18n-en="Changes">التعديلات</h2>
+<p data-i18n-en="We may modify these terms at any time, and your continued use of the site means you accept the changes.">
 قد نقوم بتعديل هذه الشروط في أي وقت،
 ويعتبر استمرارك في استخدام الموقع موافقة على التعديلات.
 </p>
 
-<p>
-آخر تحديث: 2026
-</p>
+<p data-i18n-en="Last updated: 2026">آخر تحديث: 2026</p>
 
+  <script src="/js/main.js" defer></script>
 </body>
 </html>
