--- a/tests-results.html
+++ b/tests-results.html
@@ -14,24 +14,24 @@
 
   <main class="tests-results">
     <div class="tests-results-header">
-      <h1>نتائج الاختبارات</h1>
-      <p>تابع أداءك في اختبارات الدورات واحفظ تقدمك التعليمي.</p>
+      <h1 data-i18n-en="Test results">نتائج الاختبارات</h1>
+      <p data-i18n-en="Track your performance in course tests and keep your learning progress.">تابع أداءك في اختبارات الدورات واحفظ تقدمك التعليمي.</p>
     </div>
 
     <section class="tests-results-panel">
       <div class="tests-results-summary">
         <div>
           <strong id="totalAttempts">0</strong>
-          <span>محاولة</span>
+          <span data-i18n-en="Attempts">محاولة</span>
         </div>
         <div>
           <strong id="averageScore">0%</strong>
-          <span>متوسط النتائج</span>
+          <span data-i18n-en="Average score">متوسط النتائج</span>
         </div>
       </div>
 
-      <div class="tests-results-list" id="testsResultsList"></div>
-      <div class="empty-state" id="testsResultsEmpty">لا توجد نتائج بعد.</div>
+      <div class="tests-results-list" id="testsResultsList" data-i18n-skip="true"></div>
+      <div class="empty-state" id="testsResultsEmpty" data-i18n-en="No results yet.">لا توجد نتائج بعد.</div>
     </section>
   </main>
 
