--- a/tests.html
+++ b/tests.html
@@ -20,15 +20,15 @@
 
   <!-- Main Section -->
   <section class="container">
-    <h2>اختبارات الدورات</h2>
-    <p class="section-subtitle">اختر دورة تحتوي على اختبارات وابدأ التقييم مباشرة.</p>
+    <h2 data-i18n-en="Course tests">اختبارات الدورات</h2>
+    <p class="section-subtitle" data-i18n-en="Choose a course with tests and start right away.">اختر دورة تحتوي على اختبارات وابدأ التقييم مباشرة.</p>
 
     <div class="tests-actions">
-      <a href="/tests-results.html" class="btn">نتائج الاختبارات</a>
+      <a href="/tests-results.html" class="btn" data-i18n-en="Test results">نتائج الاختبارات</a>
     </div>
 
-    <div class="courses-grid" id="testsGrid"></div>
-    <div class="empty-state" id="testsEmptyState">لا توجد اختبارات متاحة حاليًا.</div>
+    <div class="courses-grid" id="testsGrid" data-i18n-skip="true"></div>
+    <div class="empty-state" id="testsEmptyState" data-i18n-en="No tests available right now.">لا توجد اختبارات متاحة حاليًا.</div>
   </section>
 
   <!-- Footer -->
