--- a/verify-certificate.html
+++ b/verify-certificate.html
@@ -14,11 +14,11 @@
 
   <main class="verify-certificate">
     <div class="verify-card">
-      <h1>تحقق من شهادة</h1>
-      <p>أدخل رمز التحقق الموجود على الشهادة للتأكد من صحتها.</p>
+      <h1 data-i18n-en="Verify a certificate">تحقق من شهادة</h1>
+      <p data-i18n-en="Enter the verification code on the certificate to confirm its validity.">أدخل رمز التحقق الموجود على الشهادة للتأكد من صحتها.</p>
       <form id="verifyForm">
-        <input type="text" id="certificateCode" placeholder="رمز التحقق">
-        <button type="submit" class="btn">تحقق الآن</button>
+        <input type="text" id="certificateCode" placeholder="رمز التحقق" data-i18n-placeholder-en="Verification code">
+        <button type="submit" class="btn" data-i18n-en="Verify now">تحقق الآن</button>
       </form>
 
       <div id="verifyResult" class="verify-result"></div>
