--- a/forgot-password.html
+++ b/forgot-password.html
@@ -13,15 +13,15 @@
   <div id="header-placeholder"></div>
 
   <main class="login-page container">
-    <h2>إعادة تعيين كلمة المرور</h2>
+    <h2 data-i18n-en="Reset your password">إعادة تعيين كلمة المرور</h2>
 
     <form id="forgotForm">
-      <input id="forgotEmail" type="email" placeholder="البريد الإلكتروني" required>
-      <button type="submit">إرسال رابط إعادة التعيين</button>
+      <input id="forgotEmail" type="email" placeholder="البريد الإلكتروني" required data-i18n-placeholder-en="Email">
+      <button type="submit" data-i18n-en="Send reset link">إرسال رابط إعادة التعيين</button>
     </form>
 
     <p class="login-links">
-      <a href="login.html">تسجيل الدخول</a>
+      <a href="login.html" data-i18n-en="Log in">تسجيل الدخول</a>
     </p>
   </main>
 
