--- a/register.html
+++ b/register.html
@@ -2,32 +2,55 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>إنشاء حساب - CourseHub</title>
+
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/login.css">
+
+  <script type="module" src="js/main.js" defer></script>
+  <script type="module" src="js/auth.js" defer></script>
 </head>
 <body>
 
 <div id="header-placeholder"></div>
 
-<main class="login-page container">
-  <h2 data-i18n-en="Create a new account">إنشاء حساب جديد</h2>
+<main class="auth-shell container">
+  <section class="auth-panel login-page" aria-label="Register panel">
+    <p class="auth-kicker" data-i18n-en="Start now">ابدأ رحلتك الآن</p>
+    <h2 data-i18n-en="Create a new account">إنشاء حساب جديد</h2>
+    <p class="auth-subtitle" data-i18n-en="Create an account with email and password in less than a minute.">أنشئ حسابك بالبريد وكلمة المرور خلال أقل من دقيقة.</p>
 
-  <form id="registerForm">
-    <input id="regEmail" type="email" placeholder="البريد الإلكتروني" required data-i18n-placeholder-en="Email">
-    <input id="regPassword" type="password" placeholder="كلمة المرور" required data-i18n-placeholder-en="Password">
-    <button type="submit" data-i18n-en="Create account">إنشاء الحساب</button>
-  </form>
+    <form id="registerForm" novalidate>
+      <label for="regName" class="auth-label" data-i18n-en="Full name">الاسم الكامل</label>
+      <input id="regName" type="text" placeholder="الاسم الكامل" required minlength="2" data-i18n-placeholder-en="Full name">
 
-  <p class="login-links">
-    <a href="login.html" data-i18n-en="Log in">تسجيل الدخول</a>
-  </p>
+      <label for="regEmail" class="auth-label" data-i18n-en="Email">البريد الإلكتروني</label>
+      <input id="regEmail" type="email" placeholder="name@example.com" required data-i18n-placeholder-en="Email">
+
+      <label for="regPassword" class="auth-label" data-i18n-en="Password">كلمة المرور</label>
+      <input id="regPassword" type="password" placeholder="8+ أحرف" required minlength="8" data-i18n-placeholder-en="Password">
+
+      <button type="submit" data-i18n-en="Create account">إنشاء الحساب</button>
+      <div id="registerMsg" class="error-msg" role="alert" aria-live="polite"></div>
+    </form>
+
+    <p class="auth-divider" data-i18n-en="or">أو</p>
+
+    <button id="googleRegisterBtn" class="google-btn" type="button" data-i18n-en="Continue with Google">
+      المتابعة باستخدام Google
+    </button>
+
+    <p class="login-links" data-i18n-en="Already have an account?">
+      عندك حساب بالفعل؟
+      <a href="login.html" data-i18n-en="Log in">تسجيل الدخول</a>
+    </p>
+  </section>
 </main>
 
 <div id="footer-placeholder"></div>
-
-<script type="module" src="js/auth.js"></script>
-<script src="js/main.js" defer></script>
 
 </body>
 </html>
